# qreal

./: .gitignore  .gitmodules  .qmake.cache.in  .qmake.stash  .travis.yml  BusarovTestCommit.txt  Makefile  NOTICE  README.md  appveyor.yml  diagram.pro  diagram.xml  example2.txt  global.pri  initvars.pro  ololo  ololo.qrs  pch.h  qreal.pri  qreal.pro  qrealAins.pro  qrealBP.pro  qrealDatabases.pro  qrealGuiTest.pro  qrealMetaCase.pro  qrealMetaEditor.pro  qrealMetaeditor.pro  qrealMinimal.pro  qrealRobots.pro  qrealRobotsGuiTest.pro  qrealRobotsTest.pro  qrealSbt.pro  qrealTest.pri  qrealTest.pro  qrealUbiq.pro  qrealUml.pro  runVera++.bat  stats  test2.txt  testCoverage.pro  (+2 more)
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/abs/: Makefile.am  Makefile.in  cabsa.c  cabss.c  dabsa.c  dabss.c  sabsa.c  sabss.c  testAbs.h  testDoubleAbs.c  testFloatAbs.c  zabsa.c  zabss.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/conj/: Makefile.am  Makefile.in  cconja.c  cconjs.c  testConj.c  zconja.c  zconjs.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/find/: Makefile.am  Makefile.in  cfinda.c  dfinda.c  sfinda.c  testFind.c  testFind.h  zfinda.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/find2d/: Makefile.am  Makefile.in  cfind2da.c  dfind2da.c  sfind2da.c  testFind2d.c  testFind2d.h  zfind2da.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/frexp/: Makefile.am  Makefile.in  dfrexps.c  sfrexps.c  testFrexp.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/isnan/: Makefile.am  Makefile.in  cisnana.c  cisnans.c  disnana.c  disnans.c  sisnana.c  sisnans.c  testIsNan.c  testIsNan.h  zisnana.c  zisnans.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/pythag/: Makefile.am  Makefile.in  cpythags.c  dpythags.c  spythags.c  testPythag.c  testPythag.h  zpythags.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/sign/: Makefile.am  Makefile.in  csigna.c  csigns.c  dsigna.c  dsigns.c  ssigna.c  ssigns.c  testSign.c  testSign.h  zsigna.c  zsigns.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/auxiliaryFunctions/size/: Makefile.am  Makefile.in  testSize.c  testSize.h
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/: Makefile.am  Makefile.in  auxiliaryFunctions.exp  auxiliaryFunctions.lib  auxiliaryFunctions_Import.def  elementaryFunctions.ncb  elementaryFunctions.sln  elementaryFunctions.vcproj
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/Debug/: BuildLog.htm  mt.dep  vc90.idb
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/acos/: Makefile.am  Makefile.in  cacosa.c  cacoss.c  dacosa.c  dacoss.c  sacosa.c  sacoss.c  testAcos.h  testCplxAcos.c  testRealsAcos.c  zacosa.c  zacoss.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/acosh/: Makefile.am  Makefile.in  cacosha.c  cacoshs.c  dacosha.c  dacoshs.c  sacosha.c  sacoshs.c  testAcosh.h  testDoubleAcosh.c  testFloatAcosh.c  zacosha.c  zacoshs.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/asin/: Makefile.am  Makefile.in  casina.c  casins.c  dasina.c  dasins.c  sasina.c  sasins.c  testAsin.h  testDoubleAsin.c  testFloatAsin.c  zasina.c  zasins.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/asinh/: Makefile.am  Makefile.in  casinha.c  casinhs.c  dasinha.c  dasinhs.c  sasinha.c  sasinhs.c  testAsinh.h  testDoubleAsinh.c  testFloatAsinh.c  zasinha.c  zasinhs.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/atan/: Makefile.am  Makefile.in  catana.c  catans.c  datana.c  datans.c  satana.c  satans.c  testAtan.h  testDoubleAtan.c  testFloatAtan.c  zatana.c  zatans.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/atan2/: Makefile.am  Makefile.in  datan2a.c  datan2s.c  satan2a.c  satan2s.c  testAtan2.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/atanh/: Makefile.am  Makefile.in  catanha.c  catanhs.c  datanha.c  datanhs.c  satanha.c  satanhs.c  testAtanh.h  testDoubleAtanh.c  testFloatAtanh.c  zatanha.c  zatanhs.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/ceil/: Makefile.am  Makefile.in  cceila.c  cceils.c  dceila.c  dceils.c  sceila.c  sceils.c  testDoubleCeil.c  testFloatCeil.c  zceila.c  zceils.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/cos/: Makefile.am  Makefile.in  ccosa.c  ccoss.c  dcosa.c  dcoss.c  scosa.c  scoss.c  testCos.h  testDoubleCos.c  testFloatCos.c  zcosa.c  zcoss.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/cosh/: Makefile.am  Makefile.in  ccosha.c  ccoshs.c  dcosha.c  dcoshs.c  scosha.c  scoshs.c  testCosh.h  testDoubleCosh.c  testFloatCosh.c  zcosha.c  zcoshs.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/exp/: Makefile.am  Makefile.in  cexpa.c  cexps.c  dexpa.c  dexps.c  sexpa.c  sexps.c  testDoubleExp.c  testExp.h  testFloatExp.c  zexpa.c  zexps.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/exp10/: Makefile.am  Makefile.in  cexp10a.c  cexp10s.c  dexp10a.c  dexp10s.c  sexp10a.c  sexp10s.c  testDoubleExp10.c  testExp10.h  testFloatExp10.c  zexp10a.c  zexp10s.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/elementaryFunctions/fix/: Makefile.am  Makefile.in  cfixa.c  (+9 more)
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/implicitList/: Makefile.am  Makefile.in  cimplicitLists.c  dimplicitLists.c  dynlib_implicitlist.h  implicitList.h  implicitList.vcproj  int_OpColon.h  simplicitLists.c  testDoubleImplicitList.c  testFloatImplicitList.c  zimplicitLists.c
tools/Scilab2C/scilab2c_1.1-3.bin/scilab2c_1.1/src/c/type/: Makefile.am  Makefile.in  doubleComplex.c  doubleComplex.h  dynlib_type.h  floatComplex.c  floatComplex.h  int_imag.h  int_real.h  testDoubleComplex.c  testFloatComplex.c  type.ncb  type.sln  type.vcproj
(+19175 files in other folders)
