##
##  Scilab ( http://www.scilab.org/ ) - This file is part of Scilab
##  Copyright (C) 2006-2008 - INRIA - Bruno JOFRET
##
##  This file must be used under the terms of the CeCILL.
##  This source file is licensed as described in the file COPYING, which
##  you should have received as part of this distribution.  The terms
##  are also available at
##  http://www.cecill.info/licences/Licence_CeCILL_V2-en.txt
##
##

dist_SUBDIRS=	includes

SUBDIRS=	cos \
		cosh \
		acos \
		acosh \
		sin \
		sinh \
		asinh \
		tan \
		tanh \
		atan \
		atanh \
		exp \
		exp10 \
		log \
		log1p \
		log10 \
		sqrt \
		asin \
		lnp1m1 \
		pow \
		atan2\
		ceil\
		floor\
		fix\
		int\
		round
